Fix: issue 390 add truncate class to comment box in LocationBlock.tsx

--- a/src/App/components/Section/Section.module.scss
+++ b/src/App/components/Section/Section.module.scss
@@ -5,6 +5,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
+  grid-auto-rows: 1fr;
   margin-left: auto;
   margin-right: auto;
   padding-right: $space-s;
