--- a/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
+++ b/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
@@ -206,6 +206,10 @@
       font-family: roboto-bold;
       margin-right: $space-xxs;
     }
+
+    .commentTooltip {
+      font-size: $fs14;
+    }
   }
 }
 
@@ -343,4 +347,12 @@
 
 .currentBody {
   border: 2px solid $blueColor;
+}
+
+.truncate {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
